--- a/app/src/main/res/layout/monitor_notification_dual_pods_small.xml
+++ b/app/src/main/res/layout/monitor_notification_dual_pods_small.xml
@@ -7,6 +7,7 @@
     android:orientation="horizontal">
 
     <FrameLayout
+        android:id="@+id/initial_padding"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_weight="1" />
